--- a/front-react/package.json
+++ b/front-react/package.json
@@ -10,10 +10,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "currency.js": "^2.0.4",
     "material-design-icons": "^3.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-number-format": "^4.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-text-mask": "^5.4.3",
